# pysport

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SportOrg.go  SportOrg.pyw  SportOrg_test.py  app.py  appabout.py  appframe.py  appimport.py  applist.py  apptime.py  bar.py  build.py  builder.py  changelog.md  changelog_ru.md  config.py  dialog.py  iss_test.py  language.py  model.py  model.yaml  names.txt  ocad.py  ocad_test.py  pyproject.toml  ranking.txt  requirements.txt  rustfmt.toml  setup.cfg  setup.py  setup_.py  (+8 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: commits.py  version.py
.github/workflows/: check.yml  pr.yml  release.yml
benches/: test_otime_benchmark.py
configs/: countries.txt  groups.txt  middle_names.txt  names.txt  ranking_ardf.txt  regions.txt  status_comments.txt  status_default.txt
crates/sportorg-core/: Cargo.toml  pyproject.toml
crates/sportorg-core/src/: lib.rs  otime.rs
crates/sportorg-rust-example/: Cargo.toml  pyproject.toml
crates/sportorg-rust-example/src/: lib.rs
doc/: dev-ank-openspec.md
docs/: README.md  plugin-protocol.md  teamwork.md
languages/en_US/LC_MESSAGES/: sportorg.mo  sportorg.po
languages/ru_RU/LC_MESSAGES/: sportorg.mo  sportorg.po
models/: model.py
ocad/: ocad_test.py
openspec/specs/live-toolbar-button/: spec.md
openspec/specs/result-bib-reassign/: spec.md
plugin-example/: pyproject.toml
plugin-example/plugin_example/: __main__.py
scripts/: liveorg.py  orgeo.py
so_import/winorient/: csv_import.py  wdb_import.py
so_widget/: app.py  frame.py
sportorg/: config.py  iof.py  language.py  language_test.py  rust_example.py  settings.py  sportident.py
sportorg/common/: audio.py  broker.py  fake_std.py  final.py  model.py  otime.py  otime_test.py  scripts.py  singleton.py  template.py  version.py  version_test.py
sportorg/config/: sfr.py
sportorg/core/: app.py  audio.py  broker.py  event.py  model.py  otime.py  otime_test.py  plugin.py  singleton.py  template.py  version.py  version_test.py
sportorg/gui/: global_access.py  main.py  main_window.py  menu.py  post_init.py  toolbar.py
sportorg/models/: constant.py  memory.py  model.py  new_models.py
sportorg/ttk/: bar.py  table.py
sportorg/utils/: text.py  time.py
sportorg/widget/: app.py  frame.py
sportorg/winorient/: wdb_test.py
styles/: default.qss  light.qss
templates/: base.html  main.html  main_results.html  main_results_links.html  script.html  script.js.html  split_printout.html  style.css.html
templates/bib/: bib.html  bib_relay.html
templates/entries_statistics/: entries_statistics.html
templates/reports/: 1_results.html  1_results_ENG.html  1_протокол_результатов.html  1_протокол_результатов_не_финишировавшие.html  1_протокол_результатов_сплиты.html  1_протокол_результатов_термопринтер_80_мм.html  2_start_list.html  2_start_team.html  2_выписки_по_командам.html  2_протокол_старта_комментарий.html  3_team_time_sum.html  3_командный_протокол_сумма_времени.html  3_командный_протокол_сумма_времени_со_списком.html  3_командный_протокол_сумма_мест.html  3_командный_протокол_сумма_мест_все_группы.html  3_командный_протокол_сумма_очков.html  3_командный_протокол_сумма_очков_все_группы.html  3_командный_протокол_сумма_очков_со_списком.html  3_командный_протокол_сумма_очков_со_списком_без_ФИО.html  4_результаты_сумма_времени.html  4_результаты_сумма_времени_регион.html  4_результаты_сумма_кп_и_времени_(ardf).html  4_результаты_сумма_мест.html  4_результаты_сумма_мест_с_суммой_времени.html  4_результаты_сумма_очков.html  9_официальный_протокол_word.docx  9_официальный_протокол_многодневный_2дня_word.docx  9_официальный_протокол_многодневный_3дня_word.docx  9_официальный_протокол_субъекты_word.docx  9_официальный_протокол_штраф_круги_word.docx  9_официальный_протокол_штраф_минуты_word.docx  9_официальный_протокол_эстафета_word.docx  9_официальный_протокол_эстафета_с_субъектами_word.docx  ENG_1_results.html  ENG_2_start_list.html  ENG_2_start_list_relay.html  ENG_2_start_team.html  _results.html  bib.html  official_results_word_relay.docx  (+18 more)
templates/result/: 1_results.html  2_results_live.html  3_scores.html  4_sum_times.html  9_official_results_word.docx  results.html  results_links.html  results_live.html  results_penalty.html  results_penalty_with_scores.html  results_score.1.html  results_score.html  results_splits.html  results_splits_all_penalty.html  results_splits_only.html
templates/split/: 1_split_printout.html  1_маркировка_с_изображением.html  1_сплиты_маркировка_только_штраф.html  1_триатлон.html  2_marked_route_penalty_A5.html  2_маркировка_WO.html  2_маркировка_номер_и_штраф.html  3_marked_route_penalty_80mm.html  split_printout.html  split_printout2.html  split_printout3.html  split_printout4.html  split_printout_marked_route.html  split_printout_relay.html  split_printout_with_leader.html
templates/start/: 1_start_list.html  2_team.html  4_bib.html  bib.html  entries_statistics.html  start_list.html  team.html  times.html
templates/team/: team.html
templates/team_results/: team_results.html  team_results_all.html
test/: 5979_csv_wo.csv  control_fix_time.py  polar_export.py  si_backup_recovery.py  test.json  test.wdb  test1.wdb  test_3ps.wdb  write_card_from_result_to_person.py
tests/: test_constant.py  test_credit_calculation.py  test_gzip.py  test_iss.py  test_json.py  test_language.py  test_live.py  test_memory_model.py  test_menu_features.py  test_ocad.py  test_ocad_integration.py  test_otime.py  test_penalty_checking.py  test_plugins.py  test_qualification.py  test_reader.py  test_relay_results.py  test_result_checking.py  test_sfrx.py  test_sfrxexporter.py  test_srb_generation.py  test_teamwork.py  test_templates.py  test_version.py  test_wdb.py  test_winorient.py
tests/data/: CoursesV8.txt  sfrx_file.sfrx
tests/iof/: test_parse_files.py
var/: sport.py
web/: .gitignore  index.html  package-lock.json  package.json
web/src/: App.vue  main.js
winorient/: wdb_test.py
(+374 files in other folders)
